[package]
name = "wkd-exporter"
version = "0.2.2"
edition = "2021"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
description = "Exports an OpenPGP keyring into an advanced WKD directory path"
repository = "https://github.com/wiktor-k/wkd-exporter"
license = "MIT OR Apache-2.0"
keywords = ["openpgp", "wkd"]
categories = ["command-line-utilities"]
exclude = [".github"]

[[bin]]
name = "wkd-exporter"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.5.24", features = ["derive"], optional = true }
email_address = "0.2.9"
pgp = "0.14.2"
sha1 = "0.10.6"
thiserror = "2.0.9"
z-base-32 = "0.1.4"

[dev-dependencies]
testresult = "0.4.1"
dir-diff = "0.3.3"
rstest = "0.24.0"
tempfile = "3.15.0"
